# Progflow

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  uninstall.sh
src/: config.rs  error.rs  main.rs  platform.rs
src/commands/: delete.rs  edit.rs  list.rs  mod.rs  new.rs  note.rs  off.rs  on.rs  status.rs
