[package]
name = "progflow"
version = "0.1.2"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
chrono = "0.4"
libc = "0.2"
once_cell = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
